--- a/logica.html
+++ b/logica.html
@@ -212,6 +212,13 @@
 
     </div>
 <br>
+<div class="container bg-light text-center rounded-1" data-aos="fade-down">
+    <br>
+    <h2 class="display-5"><strong>Cuestionario final</strong></h2>
+    <br>
+    <button id="cuestionario" class="btn btn-dark">Iniciar cuestionario</button><br><br>
+</div>
+
 
     <footer class="footer1 footer bg-black small text-center text-white-50">
         <div class="container px-4 px-lg-5">Copyright &copy; Página web desarrollada por el equipo Bichotas <br>2021
@@ -220,6 +227,7 @@
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/logica.js"></script>
     <script>
         AOS.init();
     </script>
