--- a/bootstrap.html
+++ b/bootstrap.html
@@ -344,6 +344,18 @@
     </div>
 
     <br>
+    <div class="container bg-light text-center rounded-1" data-aos="fade-down">
+        <br>
+        
+        <h2 class="display-5"><strong>Cuestionario final</strong></h2>
+        <br>
+
+        <div id="pantallaBootstrap" class=""></div>
+        
+        <input type="button" value="Clic aqui para iniciar" class="btn btn-info" id="bootstraptest">
+        <br>
+        <br>
+    </div>
 
     <footer class="footer footer1 bg-black small text-center text-white-50">
         <div class="container px-4 px-lg-5">Copyright &copy; Página web desarrollada por el equipo Bichotas <br>2021
