--- a/js.html
+++ b/js.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lógica y Algoritmia</title>
+    <title>Javascript</title>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -281,6 +281,14 @@
     </div>
     <br>
 
+    <div class="container bg-light text-center rounded-1" data-aos="fade-down">
+        <br>
+        <h2 class="display-5"><strong>Cuestionario final</strong></h2>
+        <br>
+        <button id="cuestionario" class="btn btn-info">Dar clic al cuestionario</button><br><br>
+    </div>
+
+
     <footer class="footer1 footer bg-black small text-center text-white-50">
         <div class="container px-4 px-lg-5">Copyright &copy; Página web desarrollada por el equipo Bichotas <br>2021
         </div>
@@ -288,6 +296,7 @@
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/java.js"></script>
     <script>
         AOS.init();
     </script>
