--- a/repositorios.html
+++ b/repositorios.html
@@ -107,7 +107,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -140,7 +139,6 @@
                     </div>
                 </div>
             </div>
-
 
             <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingThree">
@@ -179,7 +177,6 @@
                     </div>
                 </div>
             </div>
-
 
             <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-heading6">
@@ -225,126 +222,130 @@
                                 allowfullscreen></iframe>
 
                         </div>
-
-
-
-
                     </div>
-
                 </div>
-                
-
-
             </div>
 
 
-        </div>
-        <div class="accordion-item">
-        <h2 class=" h2 accordion-header" id="panelsStayOpen-heading7">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#panelsStayOpen-collapse7" aria-expanded="false"
-                aria-controls="panelsStayOpen-collapse7">
-               ¿Qué es Bitbucket ?
-            </button>
-        </h2>
-        <div id="panelsStayOpen-collapse7" class="accordion-collapse collapse"
-            aria-labelledby="panelsStayOpen-heading7">
-            <div class="accordion-body">
-                <div class="row">
-                    <div class="col-lg-8">
 
-                        <p>
-                            <b>Bitbucket</b> es una herramienta para equipos profesionales. Revisa, gestiona Y
-                            colabora con tu código. Crea prueba e implementa con confianza con CI/CD incorporado.
-                            Bitbucket es un servicio en línea que ofrece muchas funcionalidades:
 
-                            Almacenamiento de repositorios en línea: esto permite trabajar a varias personas sobre el
-                            repositorio almacenado en Bitbucket.
+            <div class="accordion-item">
+                <h2 class=" h2 accordion-header" id="panelsStayOpen-heading7">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#panelsStayOpen-collapse7" aria-expanded="false"
+                        aria-controls="panelsStayOpen-collapse7">
+                        ¿Qué es Bitbucket ?
+                    </button>
+                </h2>
+                <div id="panelsStayOpen-collapse7" class="accordion-collapse collapse"
+                    aria-labelledby="panelsStayOpen-heading7">
+                    <div class="accordion-body">
+                        <div class="row">
+                            <div class="col-lg-8">
 
-                            Visualización del repositorio: la interfaz web permite tener conocimiento de las
-                            modificaciones efectuadas en el repositorio. La interfaz es clara y más agradable de usar
-                            que la línea de comandos para la consulta, ¡aunque pueda ser desconcertante para los
-                            incondicionales de la consola!
+                                <p>
+                                    <b>Bitbucket</b> es una herramienta para equipos profesionales. Revisa, gestiona Y
+                                    colabora con tu código. Crea prueba e implementa con confianza con CI/CD
+                                    incorporado.
+                                    Bitbucket es un servicio en línea que ofrece muchas funcionalidades:
 
-                            Red social: con un sistema de cuenta personal, se puede participar en proyectos libres. El
-                            perfil de la cuenta muestra los aportes del usuario a los proyectos.
+                                    Almacenamiento de repositorios en línea: esto permite trabajar a varias personas
+                                    sobre el
+                                    repositorio almacenado en Bitbucket.
 
-                            Modificación en directo: si un desarrollador debe aplicar una modificación muy simple en un
-                            archivo, puede hacerlo directamente a través de la interfaz web. Bitbucket permite editar
-                            los archivos y hacer commit desde una cuenta de usuario. Por supuesto, en caso de
-                            modificaciones sustanciales es mejor pasar por el repositorio local.
-                        </p><br>
+                                    Visualización del repositorio: la interfaz web permite tener conocimiento de las
+                                    modificaciones efectuadas en el repositorio. La interfaz es clara y más agradable de
+                                    usar
+                                    que la línea de comandos para la consulta, ¡aunque pueda ser desconcertante para los
+                                    incondicionales de la consola!
+
+                                    Red social: con un sistema de cuenta personal, se puede participar en proyectos
+                                    libres. El
+                                    perfil de la cuenta muestra los aportes del usuario a los proyectos.
+
+                                    Modificación en directo: si un desarrollador debe aplicar una modificación muy
+                                    simple en un
+                                    archivo, puede hacerlo directamente a través de la interfaz web. Bitbucket permite
+                                    editar
+                                    los archivos y hacer commit desde una cuenta de usuario. Por supuesto, en caso de
+                                    modificaciones sustanciales es mejor pasar por el repositorio local.
+                                </p><br>
+
+                            </div>
+
+                            <div class="col-lg-4 ">
+
+                                <img src="./assets/img/bitbucket-logo.png" class="img-fluid rounded " height="150"
+                                    width="260" alt="" style="position: absolute;">
+
+                            </div>
+                        </div><br> <br>
 
                     </div>
-
-                    <div class="col-lg-4 ">
-
-                        <img src="./assets/img/bitbucket-logo.png" class="img-fluid rounded " height="150" width="260"
-                            alt="" style="position: absolute;">
-
-                    </div>
-                </div><br> <br>
-
-            </div>
-            </div>
-        </div>
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="panelsStayOpen-heading4">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#panelsStayOpen-collapse4" aria-expanded="false"
-                    aria-controls="panelsStayOpen-collapse4">
-                    ¿Qué es Git lab?
-                </button>
-            </h2>
-            <div id="panelsStayOpen-collapse4" class="accordion-collapse collapse"
-                aria-labelledby="panelsStayOpen-heading4">
-                <div class="accordion-body">
-                    <div class="row">
-                        <div class="col-lg-8">
-
-                            <p>
-                                <strong>GitLab</strong> es una herramienta de ciclo de vida y repositorio de
-                                <STrong>Git</STrong>. Es un completo
-                                <a href="https://geekflare.com/es/devops-basics/" target="_blank"
-                                    rel="noopener noreferrer">DevOps</a> plataforma, que permite a los
-                                profesionales gestionar y realizar diversar tareas de proyecto. Las tareas
-                                incluyen la planificaión del proyecto, la gestión del código fuente, el
-                                mantenimiento de la seguridad y el seguimiento.
-                            </p><br>
-
-                        </div>
-
-                        <div class="col-lg-4 ">
-
-                            <img src="./assets/img/GitLab.png" class="img-fluid rounded " height="40"
-                                width="160" alt="" style="position: absolute;">
-
-                        </div>
-                    </div><br> <br>
-
-
-
-
                 </div>
-
             </div>
+
+
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="panelsStayOpen-heading4">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#panelsStayOpen-collapse4" aria-expanded="false"
+                        aria-controls="panelsStayOpen-collapse4">
+                        ¿Qué es Git lab?
+                    </button>
+                </h2>
+                <div id="panelsStayOpen-collapse4" class="accordion-collapse collapse"
+                    aria-labelledby="panelsStayOpen-heading4">
+                    <div class="accordion-body">
+                        <div class="row">
+                            <div class="col-lg-8">
+
+                                <p>
+                                    <strong>GitLab</strong> es una herramienta de ciclo de vida y repositorio de
+                                    <STrong>Git</STrong>. Es un completo
+                                    <a href="https://geekflare.com/es/devops-basics/" target="_blank"
+                                        rel="noopener noreferrer">DevOps</a> plataforma, que permite a los
+                                    profesionales gestionar y realizar diversar tareas de proyecto. Las tareas
+                                    incluyen la planificaión del proyecto, la gestión del código fuente, el
+                                    mantenimiento de la seguridad y el seguimiento.
+                                </p><br>
+
+                            </div>
+
+                            <div class="col-lg-4 ">
+
+                                <img src="./assets/img/GitLab.png" class="img-fluid rounded " height="40" width="160"
+                                    alt="" style="position: absolute;">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
-        </div>
-        </div>
+        <br>
     </div>
+
     <br>
-
+    <div class="container bg-light text-center rounded-1" data-aos="fade-down">
+        <br>
+        <h2 class="display-5"><strong>Cuestionario final</strong></h2>
+        <br>
+        <button id="cuestionario" class="btn" style="background-color: coral;">Dar clic al cuestionario</button><br><br>
     </div>
 
-    <footer class="footer bg-black small text-center text-white-50">
+
+    <footer class="footer1 footer bg-black small text-center text-white-50">
         <div class="container px-4 px-lg-5">Copyright &copy; Página web desarrollada por el equipo Bichotas <br>2021
         </div>
-
     </footer>
 
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/repo.js"></script>
     <script>
         AOS.init();
     </script>
