--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <ul class="nav justify-content-center" style="
     padding-bottom: 2%;
     padding-top: 2%;">
+        <img src="assets/img/Helprogram1.png" alt="" class="logo">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         </li>
